<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Onosendai</string>

<!-- Services. -->
	<string name="update_service_label">Onosendai update service</string>
	<string name="fetch_picture_service_label">Onosendai fetch picture service</string>
	<string name="fetch_link_service_label">Onosendai fetch link service</string>
	<string name="hosaka_sync_service_label">Onosendai Hosaka Sync service</string>
	<string name="storage_service_label">Onosendai storage service</string>
	<string name="send_outbox_service_label">Onosendai send outbox service</string>
	<string name="cleanup_service_label">Onosendai cleanup service</string>
	<string name="mark_as_read_service_label">Onosendai mark as read service</string>

<!-- Crash reporting. -->
	<string name="crash_dialog_title">CSI Onosendai</string>
	<string name="crash_dialog_text">Thank you for crash testing Onosendai.  Please email a bug report.</string>
	<string name="crash_dialog_comment_prompt">You message here:</string>
	<string name="crash_dialog_ok_toast">Thank you for your time.</string>

<!-- Welcome screens. -->
	<string name="setup_title">Onosendai Setup</string>
	<string name="setup_welcome">
		Onosendai is not currently configured.
		\n
		This will help you get started by generating an initial configuration for you that you can customise.
		\n
		Select an action from the list below.
	</string>
	<string name="setup_act_twitter">Twitter Account</string>
	<string name="setup_act_mastodon">Mastodon Account</string>
	<string name="setup_act_swimport">Import from SuccessWhale</string>
	<string name="setup_act_writeexampleconf">Manual Configuration</string>
	<string name="setup_act_useconf">Activate Manual Configuration</string>
	<string name="setup_des_twitter">
		Sign in to Twitter and authorise Onosendai to access your account.
	</string>
	<string name="setup_des_mastodon">
		Sign in to a Mastodon instance and authorise Onosendai to access your account.
	</string>
	<string name="setup_des_swimport">
		This will import your existing layout from SuccessWhale (SW).
		For this to you work you must have a SW account with a password configured.
		\n
		If you do not have a SW user-name and password please create one before continuing.
	</string>
	<string name="setup_des_writeexampleconf">
		This is an advanced option and requires you to manage a JSON file.
		\n
		This will generate you an example configuration file for you to fill in.
		After this file has been created you must go and edit it in text editor.
		Once it is ready return to this screen to import its content.
		\n
		The configuration file will be written to:
		\n
		${conf_path}
	</string>
	<string name="setup_des_useconf">
		It looks like you have created a configuration file.
		\n
		Use this option to validate that configuration file and import its content.
		\n
		Configuration will be read from:
		\n
		${conf_path}
	</string>

<!-- Main activity. -->

	<string name="main_menu_post">Post</string>
	<string name="main_menu_refresh_column">Refresh Column</string>
	<string name="main_menu_refresh_visible_columns">Refresh Visible Columns</string>
	<string name="main_menu_refresh_all">Refresh All</string>
	<string name="main_menu_outbox">Outbox</string>
	<string name="main_menu_local_search">Local Search</string>
	<string name="main_menu_preferences">Preferences</string>

	<string name="main_no_internet_connection_available">No internet connection available.</string>
	<string name="main_refresh_columns_requested">Refresh %s requested.</string>
	<string name="main_refresh_all_columns_requested">Refresh all requested.</string>

	<string name="tweet_filtered">[ filtered ]</string>
	<string name="tweetlist_refresh">Refresh</string>
	<string name="tweetlist_details_close">Close</string>
	<string name="tweetlist_details_later">Later</string>
	<string name="tweetlist_details_read">Read</string>
	<string name="tweetlist_details_rt">RT</string>
	<string name="tweetlist_details_boost">Boost</string>
	<string name="tweetlist_details_like">Like</string>
	<string name="tweetlist_details_quote">Quote</string>
	<string name="payload_edit_btn_delete">Delete</string>
	<string name="payload_media_btn_retry">Retry</string>
	<string name="sharetweet_open">Open</string>
	<string name="sharetweet_copy_link">Copy Link</string>
	<string name="sharetweet_text">Text</string>
	<string name="sharetweet_picture">Picture</string>

	<string name="tweetlist_saved_for_later">Saved for later.</string>
	<string name="tweetlist_removed_from_later">Removed.</string>
	<string name="tweetlist_send_text_to">Send text to...</string>
	<string name="tweetlist_send_picutre_to">Send picutre to...</string>
	<string name="tweetlist_requested_via_outbox">Requested via Outbox</string>
	<string name="tweetlist_btn_delete">Delete</string>
	<string name="tweetlist_permanently_delete_update">Permanently delete update?</string>
	<string name="tweetlist_deleted_via_outbox">Deleted via Outbox</string>
	<string name="tweetlist_can_not_find_this_tweet_s_account_metadata">Can not find this tweet\'s account metadata.</string>

	<string name="tweetlist_ask_quote_type">Quote Type</string>

	<string name="tweetlist_confirm_like_question">Like?</string>
	<string name="tweetlist_confirm_like_btn">Like</string>
	<string name="tweetlist_confirm_rt_question">Retweet?</string>
	<string name="tweetlist_confirm_rt_button">RT</string>
	<string name="tweetlist_confirm_favourite_question">Favourite?</string>
	<string name="tweetlist_confirm_favourite_button">Favourite</string>

<!-- Preferences. -->

	<string name="preferences_title">Onosendai Preferences</string>
	<string name="column_stats_title">Column stats</string>

	<string name="accountdlg_field_title_label">Title</string>
	<string name="accountdlg_field_title_hint">e.g. My Account</string>
	<string name="accountdlg_field_username_label">Username</string>
	<string name="accountdlg_field_password_label">Password</string>
	<string name="accountdlg_btn_test_login">Test Login</string>
	<string name="accountdlg_btn_reauthenticate">Reauthenticate</string>
	<string name="accountdlg_btn_delete">Delete</string>

	<string name="columndlg_field_title_label">Title</string>
	<string name="columndlg_field_title_hint">e.g. My Column</string>
	<string name="columndlg_field_position_label">Position</string>
	<string name="columndlg_field_hide_retweets_label">Hide RTs</string>
	<string name="columndlg_field_feeds_label">Resource</string>
	<string name="columndlg_field_exclude_label">Exclude</string>
	<string name="columndlg_field_refresh_label">Refresh</string>
	<string name="columndlg_field_media_label">Media</string>
	<string name="columndlg_field_hd_label">HD</string>
	<string name="columndlg_field_notify_label">Notify</string>
	<string name="columndlg_btn_delete">Delete</string>
	<string name="columndlg_field_notification_label">Notification</string>
	<string name="feeddlg_field_resource_label">Resource:</string>
	<string name="notifstydlg_field_lights">Lights</string>
	<string name="notifstydlg_field_vibrate">Vibrate</string>
	<string name="notifstydlg_field_sound">Sound</string>
	<string name="notifstydlg_field_exclude_retweets">Exclude Retweets</string>
	<string name="notifstydlg_field_include_own_tweets">Include Own Tweets</string>

	<string name="filterdlg_instructions">
		By default only matched against body.  Case insensitive.  Start with / for regex.  Regex flags:
		\n
		/b match body (default)
		\n
		/u match username
		\n
		/r match retweeted by
		</string>
	<string name="filterdlg_btn_delete">Delete</string>

	<string name="searchdlg_btn_search">Search</string>
	<string name="searchdlg_no_results">No results.</string>

<!-- Posting. -->
	<string name="post_btn_cancel">Cancel</string>
	<string name="post_btn_post">Post</string>
	<string name="post_btn_update_post">Update Post</string>
	<string name="post_menu">menu</string>
	<string name="post_menu_attach">Attach</string>
	<string name="post_menu_attachment">Attachment...</string>
	<string name="post_menu_change">Change</string>
	<string name="post_menu_shrink">Shrink</string>
	<string name="post_menu_remove">Remove</string>
	<string name="post_menu_text_filters">Text Filters</string>
	<string name="post_menu_save_as_draft">Save as Draft</string>
	<string name="post_account_dlg_title">Post to Account</string>
	<string name="post_attachment_current">Attachment: %s</string>
	<string name="post_attachment_ask_select">Select Picture</string>
	<string name="post_attachment_ask_shrink">Picture is %s</string>
	<string name="post_attachment_ask_shrink_btn_skrink">Shrink...</string>
	<string name="post_attachment_ask_shrink_btn_full_size">Full Size</string>
	<string name="picresizedlg_field_scale_label">Scale</string>
	<string name="picresizedlg_field_quality_label">Quality</string>
	<string name="post_confirm_post">Post to %s?</string>
	<string name="post_confirm_post_subaccounts">Post to these %1$s accounts?\n%2$s</string>
	<string name="post_confirm_post_btn_post">Post</string>
	<string name="post_confirm_post_btn_update_post">Update Post</string>
	<string name="post_confirm_post_btn_post_and_continue">Post and Continue</string>
	<string name="post_confirm_post_btn_update_post_and_continue">Update Post and Continue</string>
	<string name="post_confirm_post_btn_cancel">Cancel</string>

<!-- Outbox. -->
	<string name="outbox_title">Onosendai Outbox</string>
	<string name="outbox_menu_show_sent">Show Sent</string>
	<string name="outbox_menu_hide_sent">Hide Sent</string>
	<string name="outbox_btn_reset_failures">Reset Failures</string>
	<string name="outbox_btn_send_pending">Send Pending</string>
	<string name="outbox_lbl_is_empty">Outbox is empty.</string>

<!-- Generic. -->
	<string name="dialog_general_error">Error:</string>
	<string name="dialog_general_btn_yes">Yes</string>
	<string name="dialog_general_btn_no">No</string>

<!-- Background update and sending. -->
	<string name="background_updating_disabled_notification_title">Onosendai background updating disabled</string>
	<string name="background_updating_disabled_notification_msg">Due to low battery.</string>
	<string name="main_bgupdate_msg">Background updating disabled due to low battery.</string>
	<string name="main_bgupdate_override">+1 hour</string>

</resources>
