<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:id="@+id/group_popupmenu">

		<item
			android:id="@+id/mnuAttach"
			android:title="@string/post_menu_attach" />

		<item
			android:id="@+id/mnuAttachmentGroup"
			android:title="@string/post_menu_attachment">

			<menu>

				<item
					android:id="@+id/mnuAttachmentChange"
					android:title="@string/post_menu_change" />

				<item
					android:id="@+id/mnuAttachmentShrink"
					android:title="@string/post_menu_shrink" />

				<item
					android:id="@+id/mnuAttachmentRemove"
					android:title="@string/post_menu_remove" />

			</menu>

		</item>

		<item
			android:id="@+id/mnuTextFilter"
			android:title="@string/post_menu_text_filters" />

		<item
			android:id="@+id/mnuSaveAsDraft"
			android:title="@string/post_menu_save_as_draft" />

	</group>
</menu>