<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	xmlns:tools="http://schemas.android.com/tools">

	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5dip">

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView
				android:paddingRight="10dp"
				android:text="@string/accountdlg_field_title_label" />

			<EditText
				android:id="@+id/txtTitle"
				android:layout_weight="1"
				android:singleLine="true"
				android:hint="@string/accountdlg_field_title_hint" />

		</TableRow>

		<TableRow
			android:id="@+id/rowUsername"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/txtUsernameLabel"
				android:paddingRight="10dp"
				android:text="@string/accountdlg_field_username_label" />

			<EditText
				android:id="@+id/txtUsername"
				android:layout_weight="1"
				android:singleLine="true" />

		</TableRow>

		<TableRow
			android:id="@+id/rowPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/txtPasswordLabel"
				android:paddingRight="10dp"
				android:text="@string/accountdlg_field_password_label" />

			<EditText
				android:id="@+id/txtPassword"
				android:layout_weight="1"
				android:singleLine="true" />

		</TableRow>

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/btnTestLogin"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:text="@string/accountdlg_btn_test_login" />

		</TableRow>

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<CheckBox
				android:id="@+id/chkReauthenticate"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:text="@string/accountdlg_btn_reauthenticate" />

		</TableRow>

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<CheckBox
				android:id="@+id/chkDelete"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:text="@string/accountdlg_btn_delete" />

		</TableRow>

	</TableLayout>

</ScrollView>
